--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -14,5 +14,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
